Add PreTeXt CLI and Pelican to requirements
Added PreTeXt CLI and Pelican as requirements.

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,8 @@ xlrd
 html5lib
 tables
 empiricaldist
+
+# PreTeXt CLI - automatically generated requirement
+pretext == 2.36.0
+# Pelican is required for PreTeXt deployment strategy
+pelican >= 4.5.0
